--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,7 @@
 <%- include('partials/header') %>
 
 <h1>About</h1>
-<p><%=data%></p>
+<p>This is blog website</p>
+<p>Buidt by Annas Furquan Pasha</p>
 
 <%- include('partials/footer') %>
