--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,7 @@
 <%- include('partials/header') %>
 
 <h1>Contact</h1>
-<p><%=data%></p>
+<p>Phone No. : 09-8767</p>
+<p>Email     : test@test.com</p>
 
 <%- include('partials/footer') %>
